swagger issue solve

--- a/storyvord/templates/email/activation.html
+++ b/storyvord/templates/email/activation.html
@@ -1,30 +1,41 @@
-{% comment %} <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Activate your account</title>
-  </head>
-  <body>
-    <p>Hi {{ user.username }},</p>
-    <p>Please click the link below to activate your account:</p>
-    <p><a href="{{ activation_url }}">Activate your account</a></p>
-    <p>Thank you!</p>
-  </body>
-</html>
-{% endcomment %}
+{% load i18n %}
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Activate your account</title>
-  </head>
-  <body>
-    <p>Hi {{ user.email }},</p>
-    <p>
-      Thank you for registering. Please click the link below to activate your
-      account:
-    </p>
-    <p><a href="{{ activation_url }}">Activate your account</a></p>
-    <p>If you did not register for this account, please ignore this email.</p>
-  </body>
-</html>
+{% block subject %}
+{% blocktrans %} Account activation on {{ site_name }}{% endblocktrans %}
+{% endblock subject %}
+
+{% block text_body %}
+{% blocktrans %} You're receiving this email because you need to finish activation process on {{ site_name }}.{% endblocktrans %}
+
+{% trans "Please go to the following page to activate account:" %}
+{{ protocol }}://{{ domain }}/{{ url|safe }}
+
+<i>{% blocktrans %}If you face difficulties on account activation kindly contact us on: contact@geekyshows.com{% endblocktrans %}</i>
+
+{% endblock text_body %}
+
+{% block html_body %}
+<p>{% blocktrans %} You're receiving this email because you need to finish activation process on {{ site_name }}.{% endblocktrans %}</p>
+
+
+<p style="margin-bottom:100px"><a style="display: inline-block; padding: 10px 20px; background-color: red; color: white; text-decoration: none;" href="{{ protocol }}://{{ domain }}/{{ url|safe }}">Activate Account</a></p>
+
+<span>Follow us: </span>
+<div style="display: flex; justify-content: center; align-items: center;">
+  <a href="#" style="margin: 5px; padding: 5px ; border-radius: 10%; background-color: #E1306C; color: white; text-decoration: none; font-size:10px">
+    Instagram
+  </a>
+  <a href="#" style="margin: 5px; padding: 5px ; border-radius: 10%; background-color: #1da1f2; color: white; text-decoration: none; font-size:10px">
+    Twitter
+  </a>
+  <a href="#" style="margin: 5px; padding: 5px ; border-radius: 10%; background-color: #0077B5; color: white; text-decoration: none; font-size:10px">
+    LinkedIn
+  </a>
+  <a href="#" style="margin: 5px; padding: 5px ; border-radius: 10%; background-color: #ff0000; color: white; text-decoration: none; font-size:10px">
+    Youtube
+  </a>
+</div>
+
+<i>{% blocktrans %}If you face difficulties on account activation kindly contact us on: contact@geekyshows.com{% endblocktrans %}</i>
+
+{% endblock html_body %}
