--- a/storyvord/templates/email/password_reset.html
+++ b/storyvord/templates/email/password_reset.html
@@ -4,12 +4,12 @@
     <title>Reset your password</title>
   </head>
   <body>
-    <p>Hi {{ user.email }},</p>
+    <p>Hi {{ user }},</p>
     <p>
       We received a request to reset your password. Please click the link below
       to reset it:
     </p>
-    <p><a href="{{ url }}">{{ url }}</a></p>
+    <p><a href="{{ abs_url }}">{{abs_url}}</a></p>
     <p>If you did not request a password reset, please ignore this email.</p>
   </body>
 </html>
